--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/david_tsai.html">David Tsai</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta"></p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I was born in Taipei, Taiwan and moved to the United States at the age of 5. I love learning about the newest tech and I like learning about miscellaneous stuff during my free time.</p>
                 </div>
                 <div class="clear"></div>
               </li>
