--- a/students/david_tsai.html
+++ b/students/david_tsai.html
@@ -74,7 +74,7 @@
       </div>
 
       <div class="link-subs">
-        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">Student Name</span>
+        <span><img class="swiss-knife-icon" src="../img/swiss-army-knife.png">David Tsai</span>
         <ul class="smooth-scroller">
           <li><a href="#scroll-about">About</a></li>
           <li>|</li>
@@ -101,12 +101,10 @@
 
       <!-- Begin Title Content -->
       <div class="page-title">
-        <h4 class="ib_main_header">Student Name</h4>
+        <h4 class="ib_main_header">David Tsai</h4>
         <div class="social-icons">
-          <a href="https://twitter.com/"><i class="icon-twitter ib-social-icons"></i></a>
           <a href="https://www.linkedin.com/in/david-tsai-33819a60/"><i class="icon-linkedin-sign ib-social-icons"></i></a>
-          <a href="github-davidtsai130.github.io"><i class="icon-github ib-social-icons"></i></a>
-          <a href="#"><i class="icon-rss ib-social-icons"></i></a>
+          <a href="https://github-davidtsai130.github.io"><i class="icon-github ib-social-icons"></i></a>
         </div>
 
         <div class="section section-testimonials-curriculum quote-div">
@@ -114,7 +112,7 @@
             <ul class="testimonials slides">
               <li id="text-7" class="widget_text" style="list-style: none; display: list-item;">
                 <div class="textwidget">
-                  <h3>"Quote It was the best of times it was meh." -- someone smart said this.</h3>
+                  <h3>Let's get it.</h3>
                 </div>
               </li>
             </ul>
@@ -211,7 +209,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="github-davidtsai130.github.io/">GitHub</a><br>
+                      - <a href="https://www.codecademy.com/davidtsai130">Codecademy</a><br>
 
                     </p>
                   </div>
@@ -224,7 +222,7 @@
                     </div>
                     <div class="clear"></div>
                     <p>
-                      - <a href="github-davidtsai130.github.io/">GitHub</a><br>
+                      - <a href="https://github-davidtsai130.github.io/">GitHub</a><br>
                     </p>
                   </div>
                 </div>
