--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div id="random-full-width-content" class="this-div-is-just-a-helpful-container">
         <div class="section section-services student-index">
           <div class="section-title">
-            <span>Flatiron School Class 003</span>
+            <span>Flatiron School Class 0616</span>
           </div>
         </div>
 
@@ -98,22 +98,22 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/kevin_hernon_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Kevin Hernon</a>
                     </h3>
                   </div>
-                  <p class="home-blog-post-meta">Tag Line</p>
+                  <p class="home-blog-post-meta">"60% of the time it works everytime."</p>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I'm a native New Yorker, who wants to help bring tech to the east coast.</p>
                 </div>
                 <div class="clear"></div>
               </li>
