--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>I was born in Taipei, Taiwan and moved to the United States at the age of 5. I love learning about the newest tech and I like learning about miscellaneous stuff during my free time.</p>
+                  <p>I was born in Taipei, Taiwan and moved to the United States at the age of 5. I love learning about the new tech and I like learning about miscellaneous stuff during my free time.</p>
                 </div>
                 <div class="clear"></div>
               </li>
