--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="home-blog clearfix">
             <ul>
 
-              <!-- Yichen Yang -->
+              <!-- Begin Student-->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/yichen_yang.html">
@@ -117,7 +117,7 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Yichen Yang -->
+              <!-- End Begin Student -->
 
               <!-- Duplicate li code block above to place more students here -->
 
