--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Hi everyone! I'm originally from Beijing China. I lived in California for a while and now I'm onto my sixth year in New York. Love exploring jazz bars in the city and going to IFC during my free time. Excited to be starting the web immersive program with all of you!</p>
+                  <p>Hello everyone! I'm originally from Beijing China. I lived in California for a while and now I'm onto my sixth year in New York. Love exploring jazz bars in the city and going to IFC during my free time. Excited to be starting the web immersive program with all of you!</p>
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Begin Student -->
+              <!-- End Student -->
 
               <!-- Duplicate li code block above to place more students here -->
 
